<resources>
    <string name="app_name">Notification System</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="students">Students</string>
    <string name="teacher">Teacher</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now">Don\'t have Account? Register Now</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="emailid">EmailId</string>
    <string name="roll_number">Roll Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_error_msg">Please enter  valid email id</string>
    <string name="password_error_msg">Please enter valid password</string>
    <string name="user_error_msg">Please enter full name</string>
    <string name="cn_error_msg">Please enter valid contact number</string>
    <string name="loading">Loading....</string>
    <string name="authenticating">Authenticating....</string>
    <string name="rn_error_msg">Please enter valid roll number</string>
    <string name="batch_error_msg">Please select your batch</string>
    <string name="batch_data_empty">Students are found in this batch</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="failed">Failed</string>
    <string name="auth_failed">Authorization Failed</string>
    <string name="logged">Logged</string>
    <string name="registered_success">Please verify email id to complete registration</string>
    <string name="update_successupdate_success">Updated Sucessfully</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="service_request_msg">Your Request will be processed shortly</string>
    <string name="service_request_error">Your Request can not be processed. Please try later</string>
    <string name="password_link_send">Password reset link sent to your email id</string>
    <string name="update_password">Update Password</string>
    <string name="update_email">Update Email Id</string>
    <string name="update_contact">Update Contact Number</string>
    <string name="more">More</string>
    <string name="logout">Logout</string>
    <string name="password_changed">Password changed sucessfully</string>
    <string name="update_success">Updated Sucessfully</string>
    <string name="cancel">Cancel</string>
    <string name="resending">Resending....</string>
    <string name="send_message">Send Message</string>
    <string name="send_message_to_all">Send Message To All</string>
    <string name="search_title">Search Student</string>
    <string name="search_hint">Please enter student name</string>
    <string name="search_result">Search Results</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="back_message">Please click BACK again to exit</string>
    <string name="field_can_not_be_empty">Field can not be empty</string>
    <string name="search_result_empty">Search Result Empty</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="settings">Settings</string>
    <string name="student_list">Students List</string>
    <string name="select">Select</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_new_pic">Upload New Pic</string>
    <string name="password_demo">********</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="select_type">Select Message Type</string>
    <string name="normal">Normal</string>
    <string name="important">Important</string>
    <string name="warning">Warning</string>
    <string name="upload_file">Select File</string>
    <string name="send_to">Send To</string>
    <string name="custom">Custom</string>
    <string name="title_er_msg">Please enter title</string>
    <string name="_msg_er_msg">Please enter message</string>
    <string name="please_try_after_a_minute">Slow Internet Connection! Please try after a minute.</string>
    <string name="send_to_batch">Send to batch</string>
    <string name="done">Done</string>
    <string name="updating">updating...</string>
    <string name="msg_demo">First, you specify the table where you want to remove rows after the DELETE FROM clause. Second, you add a search condition in the WHERE clause to identify which row to remove. The WHERE clause is an optional part of the DELETE statement.</string>
    <string name="empty">Empty</string>
    <string name="click_here">Click here to download attachments</string>
    <string name="bca">BCA</string>
    <string name="mca">MCA</string>
    <string name="first">First Year</string>
    <string name="second">Second Year</string>
    <string name="third">Third Year</string>
    <string name="message_sent">Message Sent</string>
    <string name="sending">sending...</string>
    >

    <array name="type">
        <item>@string/student</item>
        <item>@string/admin</item>
    </array>
    <array name="course">
        <item>@string/bca</item>
        <item>@string/mca</item>
    </array>
    <array name="bca_years">
        <item>@string/first</item>
        <item>@string/second</item>
        <item>@string/third</item>
    </array>
    <array name="mca_years">
        <item>@string/first</item>
        <item>@string/second</item>
    </array>
    <array name="drawer_items">
        <item>@string/home</item>
        <item>@string/send_message</item>
        <item>@string/search_title</item>
    </array>
    <array name="message_type_array">
        <item>@string/normal</item>
        <item>@string/important</item>
        <item>@string/warning</item>
    </array>
    <array name="send_to">
        <item>@string/send_message_to_all</item>
        <!--<item>@string/send_to_batch</item>-->
        <item>@string/custom</item>
    </array>
</resources>
