<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kepler.notificationsystem.Register">

    <LinearLayout
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_drawable"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_drawable"
            android:hint="@string/emailid"
            android:inputType="textWebEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/cn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_drawable"
            android:hint="@string/contact_number"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_drawable"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />


        <EditText
            android:id="@+id/rn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_drawable"
            android:hint="@string/roll_number"
            android:inputType="number"
            android:maxLines="1" />

        <TextView
            android:id="@+id/select_batch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_drawable"
            android:enabled="true"
            android:drawableRight="@drawable/ic_keyboard_arrow_down"
            style="@style/TextAppearance.AppCompat.Medium"
            android:hint="@string/select_batch"
            android:padding="10dp" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_drawable"
            android:text="@string/register"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>