<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EF9B0F"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loading"
            android:textAllCaps="true"
            android:maxLines="2"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/time_stamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/holder_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EF9B0F"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_demo"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:background="@drawable/light_selector"
            android:text="@string/click_here"
            android:clickable="true"
            android:visibility="gone"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />
    </LinearLayout>


</LinearLayout>